# lskystudio

./: .gitignore  BUILD.md  README.md  electron-builder.json  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  setup.sh  tailwind.config.ts  vite.config.ts
docs/: API.md  ARCHITECTURE.md  COMPONENTS.md  DATABASE.md  DEVELOPMENT_PLAN.md  DIRECTORY_STRUCTURE.md  IPC_PROTOCOL.md  PRD.md  README.md  REFACTORING_ARCHITECTURE.md  STATE_MANAGEMENT.md  TASK_CHECKLIST.md  TECH_STACK.md  UI_SPEC.md  lsky.md
node-ipc/: config-manager.js  index.js  ipc-handler.js  package-lock.json  package.json  test.js  upload-engine.js
scripts/: build.cjs  generate-icons.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 128x128.png.html  128x128@2x.png.html  32x32.png.html  README.md  icon.png.html
src-tauri/src/: lib.rs  main.rs
src/components/layout/: app-layout.tsx  page-header.tsx  sidebar.tsx  titlebar.tsx
src/components/shared/: batch-toolbar.tsx  file-dropzone.tsx  index.ts  progress-card.tsx  status-indicator.tsx  upload-stats.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  dialog.tsx  empty-state.tsx  index.ts  label.tsx  loading-spinner.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  tabs.tsx  toast.tsx  toaster.tsx  (+1 more)
src/hooks/: use-config.ts  use-system.ts  use-theme.ts  use-upload.ts
src/lib/: animations.ts  api.ts  constants.ts  upload-engine.ts  utils.ts
src/styles/: globals.css
web/: app.js  excel-generator.js  index.html  styles.css
(+6 files in other folders)
